# repo-12

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.sgx  README.md  _config.yml  build.gradle  composer.json  gatsby-config.js  go.mod  go.sum  index.yaml  main.go  manifest.json  mix.exs  nothing.txt  package-lock.json  package.json  pom.xml  pyproject.toml  report.html  requirements.txt  requirements_test.txt  setup.py  sitemap.xml  validate-image.ps1
.devcontainer/: Dockerfile
.github/: CODEOWNERS  dependabot.yml
_data/: authors.yml  contact.yml  share.yml
_posts/: 2024-05-10-journey-to-gsoc.md  2024-06-10-gsoc-weeks-1-&-2:-laying-the-foundation.md  2024-06-24-gsoc-weeks-3-&-4:-building-momentum.md  2024-07-01-gsoc-week-5.md  2024-07-08-gsoc-weeks-5-&-6:-steady-progress-and-documentation.md  2024-07-22-gsoc-weeks-7-&-8:-refinement-and-final-touches.md  2024-08-19-gsoc-weeks-9-&-10-&11:-wrapping-upand-final-refinements.md  2024-08-23-gsoc-week-12:-all-set-and-so-i-succeed.md
_tabs/: about.md
app/: package.json
config/: runtime.exs  test.exs
docker/: Dockerfile
ethers-core/: Cargo.toml
ethers-providers/: Cargo.toml
ethers-signers/: Cargo.toml
metrics-exporter-prometheus/: Cargo.toml
metrics-exporter-tcp/: Cargo.toml
metrics-observer/: Cargo.toml
metrics-util/: Cargo.toml
slack/: backoff.go  datasource_usergroup.go  resource_usergroup.go  resource_usergroup_test.go  usergroups.go
src/: requirements.txt  rpc.rs  session.rs  utils.rs
tabby-core/: package.json
(+344 files in other folders)
