[package]
name = "tmkms-light"
version = "0.4.2"
authors = ["Tomas Tauber <2410580+tomtau@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-consensus = "2"
flex-error = "0.4"
prost = "0.11"
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
subtle-encoding = { version = "0.5", features = ["bech32-preview"] }
tendermint = "0.39"
tendermint-proto = "0.30"
tendermint-p2p = "0.30"
tracing = "0.1"

[workspace]
members = ["providers/softsign", "providers/sgx/sgx-app", "providers/sgx/sgx-runner", "providers/nitro/nitro-enclave", "providers/nitro/nitro-helper"]
default-members = ["providers/softsign"]
